--- a/Jules.ipynb
+++ b/Jules.ipynb
@@ -538,7 +538,7 @@
     {
      "data": {
       "text/plain": [
-       "#5 (generic function with 1 method)"
+       "#7 (generic function with 1 method)"
       ]
      },
      "execution_count": 26,
@@ -576,11 +576,11 @@
      "data": {
       "text/plain": [
        "5×5 Array{Float64,2}:\n",
-       " -0.358825    1.79065   -2.17736    1.64009    0.13925\n",
-       "  1.34611     0.56459   -0.505095  -1.36147    0.344472\n",
-       "  0.0299102  -0.157702  -1.00164    0.437772   0.466076\n",
-       " -0.2589      0.16902   -0.416009  -0.32824    2.00716\n",
-       "  0.83294     2.30746    1.64861   -0.768433  -1.03518"
+       "  0.0108758  -0.208481   0.918922   1.51495   -0.53972\n",
+       " -0.219352    0.886817  -0.203044  -1.50208   -1.37056\n",
+       "  0.947307    0.872703   1.47585   -0.232838  -0.758748\n",
+       "  0.352834    0.195822   0.516645  -0.107294  -0.245733\n",
+       " -0.0736822  -0.342269   1.57762   -0.202651  -0.0434652"
       ]
      },
      "execution_count": 28,
@@ -601,11 +601,11 @@
      "data": {
       "text/plain": [
        "5×5 Array{Float64,2}:\n",
-       " 7.16541  6.31035   6.60503  0.375053  7.69983\n",
-       " 5.90128  8.37357   3.42407  6.40014   2.05724\n",
-       " 5.0219   6.27192   6.60406  4.32343   4.87921\n",
-       " 7.0648   9.27339   9.34062  2.72852   2.09167\n",
-       " 7.19323  5.01577  -1.01733  4.99399   6.20845"
+       " 6.49064  6.09618  6.33973  5.0625   4.23382\n",
+       " 4.18175  5.82994  1.38043  3.82181  4.48569\n",
+       " 6.19071  7.07851  6.55412  4.95937  2.26302\n",
+       " 5.43055  5.61407  5.60385  5.1814   4.18622\n",
+       " 6.50047  6.06382  7.15685  5.06571  4.36354"
       ]
      },
      "execution_count": 29,
@@ -637,11 +637,11 @@
      "data": {
       "text/plain": [
        "5-element Array{Float64,1}:\n",
-       " -2.1773554540511633\n",
-       " -0.3588246156522302\n",
-       "  0.13924978253592754\n",
-       "  1.6400901574708764\n",
-       "  1.7906497257582856"
+       " -0.5397202710334998\n",
+       " -0.20848050690685793\n",
+       "  0.0108757848885749\n",
+       "  0.9189215722820409\n",
+       "  1.5149524690833196"
       ]
      },
      "execution_count": 31,
@@ -662,11 +662,11 @@
      "data": {
       "text/plain": [
        "5-element Array{Float64,1}:\n",
-       " -2.1773554540511633\n",
-       " -0.3588246156522302\n",
-       "  0.13924978253592754\n",
-       "  1.6400901574708764\n",
-       "  1.7906497257582856"
+       " -0.5397202710334998\n",
+       " -0.20848050690685793\n",
+       "  0.0108757848885749\n",
+       "  0.9189215722820409\n",
+       "  1.5149524690833196"
       ]
      },
      "execution_count": 32,
@@ -687,11 +687,11 @@
      "data": {
       "text/plain": [
        "5-element Array{Float64,1}:\n",
-       " -0.3588246156522302\n",
-       "  1.7906497257582856\n",
-       " -2.1773554540511633\n",
-       "  1.6400901574708764\n",
-       "  0.13924978253592754"
+       "  0.0108757848885749\n",
+       " -0.20848050690685793\n",
+       "  0.9189215722820409\n",
+       "  1.5149524690833196\n",
+       " -0.5397202710334998"
       ]
      },
      "execution_count": 33,
@@ -806,47 +806,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[?25l    "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaRegistries/General.git`\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2K\u001b[?25h[1mFetching:\u001b[22m\u001b[39m [========================================>]  100.0 %"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m registry at `~/.juliapro/JuliaPro_v1.4.2-1/registries/JuliaPro`\n",
       "\u001b[32m\u001b[1m  Resolving\u001b[22m\u001b[39m package versions...\n",
       "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Example ─ v0.5.3\n",
-      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.4/Project.toml`\n",
+      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m `~/.juliapro/JuliaPro_v1.4.2-1/environments/v1.4/Project.toml`\n",
       " \u001b[90m [7876af07]\u001b[39m\u001b[92m + Example v0.5.3\u001b[39m\n",
-      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.4/Manifest.toml`\n",
-      " \u001b[90m [7876af07]\u001b[39m\u001b[92m + Example v0.5.3\u001b[39m\n"
+      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m `~/.juliapro/JuliaPro_v1.4.2-1/environments/v1.4/Manifest.toml`\n",
+      " \u001b[90m [7876af07]\u001b[39m\u001b[92m + Example v0.5.3\u001b[39m\n",
+      "\u001b[32m\u001b[1m  Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m `~/.juliapro/JuliaPro_v1.4.2-1/environments/v1.4/Project.toml`\n",
+      " \u001b[90m [5ae59095]\u001b[39m\u001b[92m + Colors v0.12.2\u001b[39m\n",
+      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m `~/.juliapro/JuliaPro_v1.4.2-1/environments/v1.4/Manifest.toml`\n",
+      "\u001b[90m [no changes]\u001b[39m\n",
+      "\u001b[32m\u001b[1m  Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m x264_jll ────────── v2019.5.25+2\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m PlotUtils ───────── v1.0.5\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Opus_jll ────────── v1.3.1+1\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Showoff ─────────── v0.3.1\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Ogg_jll ─────────── v1.3.4+0\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Bzip2_jll ───────── v1.0.6+2\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m StaticArrays ────── v0.12.3\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m RecipesBase ─────── v1.0.1\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Plots ───────────── v1.4.3\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m LibVPX_jll ──────── v1.8.1+1\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m libvorbis_jll ───── v1.3.6+4\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m FriBidi_jll ─────── v1.0.5+3\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m x265_jll ────────── v3.0.0+1\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Missings ────────── v0.4.3\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m FreeType2_jll ───── v2.10.1+2\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m StatsBase ───────── v0.33.0\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Zlib_jll ────────── v1.2.11+12\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m libass_jll ──────── v0.14.0+2\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m OpenSSL_jll ─────── v1.1.1+3\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m libfdk_aac_jll ──── v0.1.6+2\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m PlotThemes ──────── v2.0.0\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m GeometryTypes ───── v0.8.3\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Measures ────────── v0.3.1\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m LAME_jll ────────── v3.100.0+1\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m NaNMath ─────────── v0.3.3\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m SortingAlgorithms ─ v0.3.1\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m FFMPEG ──────────── v0.3.0\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m RecipesPipeline ─── v0.1.10\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m GR ──────────────── v0.50.90\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Contour ─────────── v0.5.3\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m FFMPEG_jll ──────── v4.1.0+3\n",
+      "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m ColorSchemes ────── v3.9.0\n",
+      "-=O=-     #    #    #    #                                                     \n",
+      "curl: (52) Empty reply from server\n",
+      "######################################################                     74.1%-=O=-#  #    #    #                                                            "
      ]
     }
    ],
@@ -863,7 +877,20 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: Package Example not found in current path:\n- Run `import Pkg; Pkg.add(\"Example\")` to install the Example package.\n",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Package Example not found in current path:\n- Run `import Pkg; Pkg.add(\"Example\")` to install the Example package.\n",
+      "",
+      "Stacktrace:",
+      " [1] require(::Module, ::Symbol) at ./loading.jl:892",
+      " [2] top-level scope at In[39]:1"
+     ]
+    }
+   ],
    "source": [
     "using Example"
    ]
@@ -12262,9 +12289,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.4.2",
+   "display_name": "JuliaPro_v1.4.2-1 1.4.2",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "juliapro_v1.4.2-1-1.4"
   },
   "language_info": {
    "file_extension": ".jl",
